Reduce usage of APIs marked as deprecated for removal